...
    <string name="dialog_upload_file">We aren\'t able to open this document, because we don\'t support its format. Do you want to upload it to our server temporarily, so we can display it for you anyway?</string>
    <string name="dialog_title_choose_file">Choose file from device</string>
    <string name="dialog_list_no_documents_found">No documents found</string>
    <string name="dialog_list_searching_documents">Searching for documents on your device... This could take some time.</string>
    <string name="menu_recent">Recent documents</string>
    <string name="menu_search">Search</string>
    <string name="menu_open">Open</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_remove_ads">Feature Store</string>
    <string name="menu_reload">Reload without limit</string>
    <string name="menu_fullscreen">Fullscreen mode</string>
...
