...
    <string name="toast_hint_sheet_cut_columns">This sheet is too big to show in full. Showing the first %1$s of %2$s columns.</string>
    <string name="toast_hint_sheet_cut_rows_and_columns">This sheet is too big to show in full. Showing the first %1$s of %2$s rows and %3$s of %4$s columns.</string>
    <string name="toast_hint_unsupported_file">Not happy with how the file is displayed? Open it in another app instead.</string>
    <string name="toast_error_save_nofile">No place to save the file to chosen.</string>
    <string name="toast_error_save_failed">File could not be saved. Please contact support@opendocument.app</string>
    <string name="toast_error_out_of_memory">Device out of memory! Too many pictures, or file too big.</string>
    <string name="toast_error_password_protected">This document is password-protected</string>
    <string name="dialog_loading_title">Loading…</string>
    <string name="dialog_generic_loading_message">Please wait, this could take a few minutes.</string>
    <string name="menu_search">Search in document</string>
    <string name="menu_open_with">Open with...</string>
    <string name="menu_share">Share document</string>
    <string name="menu_edit">Edit document</string>
...
